--- a/style.css
+++ b/style.css
@@ -2,13 +2,14 @@ html, body
 {
   max-width: 100%;
   overflow-x: hidden;
-  background-color: #fafafa;
+  background-color: #fff;
 }
 
 .container
 {
     width: 100%;
-    height: 70vh;
+	height: 70vh;
+	margin-bottom: 10%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -23,16 +24,41 @@ html, body
 
 .container2
 {
-    width: 100%;
+	width: 100%;
     display: flex;
+    align-items: center;
+	justify-content: center;
+	/*background-color: blue;*/
+}
+
+.linksContainer1
+{
+    width: 60px;
+	height: 70px;
     align-items: center;
     justify-content: center;
 }
 
-.linksContainer
+.linksContainer2
 {
-    width: 300px;
-    height: 70px;
+	width: 60px;
+	height: 70px;
+    align-items: center;
+    justify-content: center;
+}
+
+.linksContainer3
+{
+	width: 60px;
+	height: 70px;
+    align-items: center;
+    justify-content: center;
+}
+
+.linksContainer4
+{
+	width: 60px;
+	height: 70px;
     align-items: center;
     justify-content: center;
 }
@@ -66,60 +92,26 @@ a {
 
 /* LINKS */
 
-/*Change icons size here*/
-.social-icons .fa {
-	font-size: 1.8em;
-}
-/*Change icons circle size and color here*/
-.social-icons .fa {
-	width: 50px;
-	height: 50px;
-	line-height: 50px;
-	text-align: center;
-	color: #FFF;
-	color: rgba(255, 255, 255, 0.8);
-	-webkit-transition: all 0.3s ease-in-out;
-	-moz-transition: all 0.3s ease-in-out;
-	-ms-transition: all 0.3s ease-in-out;
-	-o-transition: all 0.3s ease-in-out;
-	transition: all 0.3s ease-in-out;
+#crossFade
+{
+  position: relative;
+  margin: 0 auto;
 }
 
-.social-icons.icon-circle .fa{ 
-	border-radius: 50%;
-}
-.social-icons.icon-rounded .fa{
-	border-radius:5px;
-}
-.social-icons.icon-flat .fa{
-	border-radius: 0;
+#crossFade img
+{
+  position: absolute;
+  left:0;
 }
 
-.social-icons .fa:hover, .social-icons .fa:active {
-	color: #FFF;
-  background-color: #000;
-	-webkit-box-shadow: 1px 1px 3px #333;
-	-moz-box-shadow: 1px 1px 3px #333;
-	box-shadow: 1px 1px 3px #333; 
+#crossFade img.top:hover {
+	opacity:0;
 }
-.social-icons.icon-zoom .fa:hover, .social-icons.icon-zoom .fa:active { 
- 	-webkit-transform: scale(1.1);
-	-moz-transform: scale(1.1);
-	-ms-transform: scale(1.1);
-	-o-transform: scale(1.1);
-	transform: scale(1.1); 
+
+#crossFade a.bottom:link {
+	opacity:0;
 }
-.social-icons.icon-rotate .fa:hover, .social-icons.icon-rotate .fa:active { 
-	-webkit-transform: scale(1.1) rotate(360deg);
-	-moz-transform: scale(1.1) rotate(360deg);
-	-ms-transform: scale(1.1) rotate(360deg);
-	-o-transform: scale(1.1) rotate(360deg);
-	transform: scale(1.1) rotate(360deg);
+
+#crossFade a.bottom:hover {
+	opacity:100;
 }
- 
-
-.social-icons .fa-facebook,.social-icons .fa-facebook-square{background-color:#636363;}  
-
-.social-icons .fa-github,.social-icons .fa-github-alt,.social-icons .fa-github-square{background-color:#636363;} 
-
-.social-icons .fa-linkedin,.social-icons .fa-linkedin-square{background-color:#636363;} 
