--- a/style.css
+++ b/style.css
@@ -1,23 +1,40 @@
-html, body
-{
-  max-width: 100%;
-  overflow-x: hidden;
-  background-color: #fff;
+html,
+body {
+	margin: 0;
+	padding: 0;
+}
+@media only screen {
+	body {
+		margin: 2em auto;
+		max-width: 900px;
+        color: rgb(55, 53, 47);
+        line-height: 1;
+	}
 }
 
 .container
 {
     width: 100%;
-	height: 70vh;
+	height: 65vh;
 	margin-bottom: 10%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
+hr.new {
+    background: transparent;
+	display: block;
+	width: 100%;
+	height: 1px;
+	visibility: visible;
+	border: none;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.623);
+}
+
 .intro
 {
-    width: 400px;
+    width: 500px;
     height: 200px;
     align-content: center;
 }
@@ -68,28 +85,22 @@ html, body
     color: #000;
 }
 
-/*h1{
-    font-family: Arial, helvetica, sans-serif;
-    color: #737373;
-    color: #000;
-    font-style: italic;
-    letter-spacing: 1.5px;
-}*/
-
 #colorchange {
 	color: black;
 	font-family: Arial, helvetica, sans-serif;
-	font-style: italic;
 	letter-spacing: 1.5px;
 }  
 
 p.block
 {
     font-weight: lightest;
-    font-family: Arial, helvetica, sans-serif;
-    color: #636363;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    padding-top: 1.6px;
+    padding-bottom: 1.6px;
     letter-spacing: 0.6px;
     line-height: 23px;
+    color:rgb(55, 53, 47);
 }
 
 a { 
@@ -99,7 +110,8 @@ a {
 
 a.link:hover
 {
-	color: #000;
+    color: #000;
+    text-decoration: underline;
 }
 
 /*LINE*/
