--- a/style.css
+++ b/style.css
@@ -17,6 +17,11 @@ h1
     text-align: center;
 }
 
+#mySong
+{
+    font-style: italic;
+}
+
 .container
 {
     width: 100%;
@@ -106,6 +111,18 @@ p.block
     letter-spacing: 0.6px;
     line-height: 23px;
     color:rgb(55, 53, 47);
+}
+
+p.music {
+    font-weight: lightest;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";    margin-top: 0.5em;
+    color:rgb(55, 53, 47);
+    letter-spacing: 0.6px;
+    width: 100%;
+	margin-bottom: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 a { 
