--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 html,
 body {
 	margin: 0;
-	padding: 0;
+    padding: 0;
+    max-height: 70%;
 }
-@media only screen {
+@media only screen and (max-width: 400px) {
 	body {
-		margin: 2em auto;
-		max-width: 900px;
+        margin: 2em auto;
+        padding: 10% 10% 10% 10%;
         color: rgb(55, 53, 47);
         line-height: 1;
 	}
@@ -30,7 +31,8 @@ h1
 .container
 {
     width: 100%;
-	height: 65vh;
+    margin-top: 13%;
+	/* height: 100%; */
 	margin-bottom: 10%;
     display: flex;
     align-items: center;
@@ -56,7 +58,8 @@ hr.new {
 
 .container2
 {
-	width: 100%;
+    width: 100%;
+    margin-top: 11%;
     display: flex;
     align-items: center;
 	justify-content: center;
