--- a/style.css
+++ b/style.css
@@ -23,6 +23,22 @@ body {
         align-items: center;
         justify-content: center;
     }
+
+    .intro
+    {
+        width: 100%;
+        height: 100%;
+        align-content: center;
+    }
+
+    .container2
+    {
+        width: 100%;
+        margin-top: 10vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 }
 
 h1
@@ -63,7 +79,7 @@ hr.new {
 
 .intro
 {
-    width: 440px;
+    width: 30.7%;
     height: 200px;
     align-content: center;
 }
@@ -75,7 +91,6 @@ hr.new {
     display: flex;
     align-items: center;
 	justify-content: center;
-	/*background-color: blue;*/
 }
 
 .linksContainer1
