--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
         justify-content: center;
     }
 
-    /* .intro
+    .intro
     {
         width: 100%;
         height: 100%;
@@ -38,7 +38,7 @@ body {
         display: flex;
         align-items: center;
         justify-content: center;
-    } */
+    }
 }
 
 h1
@@ -79,7 +79,7 @@ hr.new {
 
 .intro
 {
-    width: 30.7%;
+    width: 440px;
     height: 200px;
     align-content: center;
 }
