--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 	margin: 0;
     padding: 0;
     max-height: 70%;
-    background-color: rgb(252, 252, 252);
+    /* background-color: rgb(252, 252, 252); */
     animation: fadeInAnimation ease 1s 
 }
 
