added book titles

--- a/style.css
+++ b/style.css
@@ -58,6 +58,15 @@ h1
     text-align: left;
 }
 
+h2
+{
+    font-family: 'Cormorant Garamond', serif;
+    font-weight: 100;
+    letter-spacing: 0.6px;
+    font-size: 120%;
+    margin-bottom: 0px;
+}
+
 #songPlaying 
 {
     display: none;
@@ -87,6 +96,16 @@ h1
 .songUpperContainer
 {
     float: right; 
+}
+
+.date
+{
+    display: inline; 
+    font-weight: bolder; 
+    font-family: 'Roboto', sans-serif; 
+    color:black; 
+    letter-spacing: 0.4px; 
+    font-size: 50%;
 }
 
 .container
@@ -174,7 +193,6 @@ hr.new {
     font-family: 'Cormorant Garamond', serif;
     font-weight: 100;
     letter-spacing: 0.6px;
-    /* height: 3em; */
 }  
 
 p.block
@@ -183,6 +201,32 @@ p.block
     font-weight: bolder;
     line-height: 150%;
     font-family: 'Roboto', sans-serif;
+    margin-bottom: 0.1%;
+    letter-spacing: 0.6px;
+    transform:scale(1,0.95);
+    color:black;
+}
+
+p.block2
+{
+    /* font-family: 'Work Sans', sans-serif; */
+    font-weight: bolder;
+    line-height: 150%;
+    font-family: 'Roboto', sans-serif;
+    margin-top: -2%;
+    margin-bottom: 0.1%;
+    letter-spacing: 0.6px;
+    transform:scale(1,0.95);
+    color:black;
+}
+
+p.block3
+{
+    /* font-family: 'Work Sans', sans-serif; */
+    font-weight: bolder;
+    line-height: 150%;
+    font-family: 'Roboto', sans-serif;
+    margin-top: 0%;
     margin-bottom: 0.1%;
     letter-spacing: 0.6px;
     transform:scale(1,0.95);
