--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ h1
 h2
 {
     font-family: Arial, Helvetica, sans-serif; 
-    font-weight: 100;
+    /* font-weight: 100; */
     letter-spacing: 0.6px;
     font-size: 120%;
     margin-bottom: 0px;
@@ -160,19 +160,19 @@ hr.new {
 #colorchange {
 	color: black;
     /* font-family: 'Roboto', sans-serif; */
-    font-family: 'Roboto', sans-serif;
+    font-family: Arial, sans-serif;
     font-weight: 100;
     letter-spacing: 0.6px;
 }  
 
 p.block, ul, p.music
 {
-    font-weight: 80%;
-    line-height: 150%;
-    font-family: Arial, Helvetica, sans-serif; 
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, Helvetica; 
+    font-weight: 200;
+    line-height: 160%;
     margin-bottom: 0.1%;
-    letter-spacing: 0.4px;
-    transform:scale(1,0.98);
+    letter-spacing: 0.3px;
+    transform:scale(1,0.97);
     color:black;
 }
 
