small changes w showing player on load

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 	margin: 0;
     padding: 0;
     max-height: 70%;
-    background-color: #F9F7F6;
+    /* background-color: #F9F7F6; */
     animation: fadeInAnimation ease 1s 
 }
 
@@ -81,7 +81,7 @@ h2
 .container
 {
     width: 100%;
-    margin-top: 10%;
+    margin-top: 5%;
 	/* height: 100%; */
 	margin-bottom: 10%;
     display: flex;
