--- a/style.css
+++ b/style.css
@@ -60,11 +60,11 @@ h1
 
 h2
 {
-    font-family: Arial, Helvetica, sans-serif; 
-    /* font-weight: 100; */
+	color: black;
+    font-family: Arial, sans-serif;
+    font-weight: 100;
+    font-size: larger;
     letter-spacing: 0.6px;
-    font-size: 120%;
-    margin-bottom: 0px;
 }
 
 #songPlaying 
@@ -167,13 +167,11 @@ hr.new {
 
 p.block, ul, p.music
 {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, Helvetica; 
-    font-weight: 200;
+    color: black;
+    font-family: Arial, sans-serif;
+    font-size: 70;
     line-height: 160%;
-    margin-bottom: 0.1%;
-    letter-spacing: 0.3px;
     transform:scale(1,0.97);
-    color:black;
 }
 
 a.nounderline {
