--- a/style.css
+++ b/style.css
@@ -82,8 +82,7 @@ h2
 {
     width: 100%;
     margin-top: 5%;
-	/* height: 100%; */
-	margin-bottom: 10%;
+	padding-bottom: 5em;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -250,11 +249,19 @@ p.entry-title
     background-color: #aaaaf3;
 }
 
+.entry-container-1, .entry-container-2
+{
+    padding-bottom: 2em;
+}
+
 button.filter
 {
     color: inherit; 
     text-decoration: none;
     color: #aaaaf3;
+    /* background-color: blue; */
+    font-size: 70;
+    transform:scale(1,0.97);
     border: none;
     outline: none;
     background-color: white;
