--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ h2
 .container
 {
     width: 100%;
-    margin-top: 5%;
+    margin-top: 8%;
 	padding-bottom: 5em;
     display: flex;
     align-items: center;
@@ -249,7 +249,7 @@ p.entry-title
     background-color: #aaaaf3;
 }
 
-.entry-container-1, .entry-container-2
+.entry-container-1, .entry-container-2, .entry-container-3
 {
     padding-bottom: 2em;
 }
