final updates w content + mobile

--- a/mobile_style.css
+++ b/mobile_style.css
@@ -7,6 +7,12 @@
         color: black;
         line-height: 1;
     }
+
+    .links
+    {
+        visibility: hidden;
+        display: none;
+    }
     
     .container
     {
@@ -31,6 +37,6 @@
     {
         width: 100%;
         margin-bottom: 6%;
-        justify-content: center;
+        justify-content: left;
     }
 }
